samples/_failures_safe/1761500929_8495ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1864e1f1.c: In function ‘main’:
./samples/SAFE/__tmp_1864e1f1.c:153:24: error: expected ‘]’ at end of input
  153 |     transitions_stack[3
      |                        ^
      |                        ]
./samples/SAFE/__tmp_1864e1f1.c:153:5: error: expected declaration or statement at end of input
  153 |     transitions_stack[3
      |     ^~~~~~~~~~~~~~~~~
